styles/main: fixup complex list page on mobile safari

--- a/webroot/styles/main.css
+++ b/webroot/styles/main.css
@@ -400,7 +400,7 @@ code {
 		margin: 12px 0;
 	}
 
-	.items .description {
+	.items:not(.items-complex) .description {
 		overflow: hidden;
 		text-overflow: ellipsis;
 		display: -webkit-box;
